--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BIN</string>
     <string name="search_tab">Search</string>
     <string name="history_tab">History</string>
+    <string name="default_search_error_message">Error when requesting card data</string>
 </resources>
