--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="bank_url">Url</string>
     <string name="bank_phone">Phone</string>
     <string name="bank_city">City</string>
+    <string name="input_card_number_label">Enter the first digits of a card number (BIN/IIN)</string>
 </resources>
