--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">BIN</string>
     <string name="search_tab">Search</string>
     <string name="history_tab">History</string>
-    <string name="default_search_error_message">Error when requesting card data</string>
+    <string name="default_search_error_message">An unknown error occurred</string>
     <string name="card_head">Card</string>
     <string name="card_scheme">Scheme</string>
     <string name="card_type">Type</string>
