--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">BIN</string>
+    <!--  Main screen  -->
     <string name="search_tab">Search</string>
     <string name="history_tab">History</string>
-    <string name="default_search_error_message">An unknown error occurred</string>
+    <!--  Search screen  -->
+    <string name="input_card_number_label">Enter the first digits of a card number (BIN/IIN)</string>
     <string name="card_head">Card</string>
     <string name="card_scheme">Scheme</string>
     <string name="card_type">Type</string>
@@ -23,5 +25,9 @@
     <string name="bank_url">Url</string>
     <string name="bank_phone">Phone</string>
     <string name="bank_city">City</string>
-    <string name="input_card_number_label">Enter the first digits of a card number (BIN/IIN)</string>
+    <!--  Error messages  -->
+    <string name="unknown_error">An unknown error occurred</string>
+    <string name="unknown_format">Unknown response format</string>
+    <string name="no_internet">No internet connection</string>
+    <string name="binlookup_hit_request_limit">Hit request limit to BinLookup service</string>
 </resources>
