--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,9 +27,9 @@
     <string name="bank_phone">Phone</string>
     <string name="bank_city">City</string>
     <!--  Error messages  -->
-    <string name="unknown_error">An unknown error occurred</string>
-    <string name="unknown_format">Unknown response format</string>
     <string name="no_internet">No internet connection</string>
-    <string name="binlookup_hit_request_limit">Hit request limit to BinLookup service</string>
+    <string name="binlookup_too_many_request">Hit request limit to BinLookup service</string>
+    <string name="binlookup_is_unavailable">BinLookup service is unavailable</string>
+    <string name="binlookup_unknown_response">Unknown format BinLookup service response</string>
 
 </resources>
