--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,8 +30,8 @@
     <string name="no_search_yet">You haven\'t success search yet</string>
     <!--  Error messages  -->
     <string name="no_internet">No internet connection</string>
-    <string name="binlookup_too_many_request">Too many request</string>
-    <string name="binlookup_is_unavailable">Service is unavailable</string>
-    <string name="binlookup_unknown_response">Unknown response format</string>
-    <string name="binlookup_no_matching_card">No matching card</string>
+    <string name="too_many_request">Too many request</string>
+    <string name="service_is_unavailable">Service is unavailable</string>
+    <string name="unknown_response_format">Unknown response format</string>
+    <string name="no_matching_card">No matching card</string>
 </resources>
